--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs && node ./scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
@@ -24,7 +26,10 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "globby": "^13.1.2",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "rss": "^1.2.2",
     "tailwindcss": "^3.1.3",
     "typescript": "4.7.4"
   }
