--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.18.1",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "next-translate": "^1.4.0",
