--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentlayer": "^0.2.5",
     "daisyui": "^2.18.1",
     "next": "12.1.6",
+    "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
     "next-translate": "^1.4.0",
     "react": "18.2.0",
@@ -30,6 +32,12 @@
     "globby": "^13.1.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-prism-plus": "^1.4.2",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "tailwindcss": "^3.1.3",
     "typescript": "4.7.4"
