--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^2.3.0",
     "contentlayer": "^0.2.5",
     "daisyui": "^2.18.1",
-    "next": "12.1.6",
+    "next": "12.2.0",
     "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
     "next-translate": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf-tailwind": "^1.0.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
