--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "@react-pdf/renderer": "^2.3.0",
     "contentlayer": "^0.2.5",
     "daisyui": "^2.18.1",
@@ -26,7 +27,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@types/node": "18.0.0",
+    "@types/node": "^18.6.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
@@ -35,6 +36,7 @@
     "globby": "^13.1.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.1.0",
@@ -43,6 +45,7 @@
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "tailwindcss": "^3.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
 }
